--- a/index.html
+++ b/index.html
@@ -1,63 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gerador De Senhas</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./CSS/style.css" />
     <script src="./JS/script.js" defer></script>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <div id="container-registro">
-        <div id="banner-registro">
-            <div id="banner-layer">
-                <h1>Seja bem-vindo!</h1>
-            </div>
+      <div id="banner-registro">
+        <div id="banner-layer">
+          <h1>Seja bem-vindo!</h1>
         </div>
-        <div id="form-registro">
-            <h2>Crie sua conta:</h2>
-            <p>Registre-se para utilitzar todas as funcionalidades do sistema</p>
-            <div class="alinha-form">
-                <label for="name">Nome</label>
-                <input type="text" name="name" id="name-input" placeholder="Digite o seu nome">
-            </div>
-
-            <div class="alinha-form">
-                <label for="email">E-mail</label>
-                <input type="email" name="email" id="email-input" placeholder="Digite o seu e-mail">
-            </div>
-
-            <div class="alinha-form">
-                <label for="senha">Senha</label>
-                <input type="password" name="senha" id="senha-input" placeholder="Digite a sua senha">
-            </div>
-            <p>Quer ajuda para criar sua senha? <span id="gerar-senha">Clique aqui.</span></p>
-            <div id="gerador-senha">
-                <p>Aqui está a sua senha </p>
-                <h4></h4>
-            </div>
-            <div class="alinha-form">
-                <label for="senha-confirmada">Confirme sua senha</label>
-                <input type="password" name="senha-confirmada" id="confirma-senha-input"
-                    placeholder="Confirme a sua senha">
-            </div>
-            <input type="submit" Value="Cadastrar">
+      </div>
+      <div id="form-registro">
+        <h2>Crie sua conta:</h2>
+        <p>Registre-se para utilitzar todas as funcionalidades do sistema</p>
+        <div class="alinha-form">
+          <label for="name">Nome</label>
+          <input
+            type="text"
+            name="name"
+            id="name-input"
+            placeholder="Digite o seu nome"
+          />
         </div>
+
+        <div class="alinha-form">
+          <label for="email">E-mail</label>
+          <input
+            type="email"
+            name="email"
+            id="email-input"
+            placeholder="Digite o seu e-mail"
+          />
+        </div>
+
+        <div class="alinha-form">
+          <label for="senha">Senha</label>
+          <input
+            type="password"
+            name="senha"
+            id="senha-input"
+            placeholder="Digite a sua senha"
+          />
+        </div>
+        <p>
+          Quer ajuda para criar sua senha?
+          <span id="abrir-gerar-senha">Clique aqui.</span>
+        </p>
+        <div id="gerar-opcoes" class="hide">
+          <p>Selecione as opções que vc deseja</p>
+          <div class="alinha-form">
+            <label for="lenght">Quantidade de caracteres:</label>
+            <input type="text" name="lenght" id="tamanho" value="10" />
+          </div>
+          <div class="alinha-form"> 
+            <label for="letras">Letras:</label>
+            <input type="checkbox" name="letras" id="letras" checked />
+          </div>
+          <div class="alinha-form">
+            <label for="numeros">Numeros:</label>
+            <input type="checkbox" name="numeros" id="numeros" checked />
+          </div>
+          <div class="alinha-form">
+            <label for="simbolos">Simbolos:</label>
+            <input type="checkbox" name="simbolos" id="simbolos" checked />
+          </div>
+          <button id="gerar-senha">Criar senha</button>
+        </div>
+        <div id="gerador-senha">
+          <p>Aqui está a sua senha</p>
+          <h4></h4>
+          <button id="copy">Copiar</button>
+        </div>
+        <div class="alinha-form">
+          <label for="senha-confirmada">Confirme sua senha</label>
+          <input
+            type="password"
+            name="senha-confirmada"
+            id="confirma-senha-input"
+            placeholder="Confirme a sua senha"
+          />
+        </div>
+        <input type="submit" value="Cadastrar" />
+      </div>
     </div>
-
-
-
-
-
-
-
-</body>
-
+  </body>
 </html>
