--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <div id="form-registro">
         <h2>Crie sua conta:</h2>
-        <p>Registre-se para utilitzar todas as funcionalidades do sistema</p>
+        <p>Registre-se para utilizar todas as funcionalidades do sistema</p>
         <div class="alinha-form">
           <label for="name">Nome</label>
           <input
